added model plus made api for heroku push

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,15 @@ soupsieve = "*"
 urllib3 = "*"
 werkzeug = "*"
 flask-cors = "*"
+gunicorn = "*"
+joblib = "*"
+keras-preprocessing = "*"
+requests-oauthlib = "*"
+scikit-learn = "*"
+tensorflow-cpu = "*"
+tensorboard = "*"
+setuptools = "*"
+pandas = "*"
 
 [requires]
 python_version = "3.8"
